fixed sidebar on mobile

--- a/src/components/MainPage/Header/Header.css
+++ b/src/components/MainPage/Header/Header.css
@@ -2,6 +2,8 @@
     --black-bg: black;
 }
 
+
+
 .header{
     max-width: 100%;
     height: 90px;
@@ -31,25 +33,23 @@
     width: 60%;
 }
 
-.navbar__dropdown-menu{
-    position: absolute;
-    /* display: none; */
-    opacity: 0;
+.navbar__dropdown-menu {
+    position: fixed;
     top: 90px;
+    right: 0;
     width: 70%;
     height: 100vh;
     background: rgb(0, 0, 0);
-    transform: translateX(300px);
-    transition: transform 0.4s ease, opacity 0.4s ease, visibility 0s 0.4s;
-    visibility: hidden;
+
+    transform: translateX(100%); 
+    opacity: 0;
+    pointer-events: none;
+
+    transition: transform 0.4s ease, opacity 0.8s ease;
 }
 
-.navbar__dropdown-menu.open{
-    /* display: flex; */
+.navbar__dropdown-menu.open {
+    transform: translateX(0);
     opacity: 1;
-    left: none;
-    transform: translateX(50%);
-    transition: transform 0.4s ease, opacity 0.4s ease;
-    visibility: visible;
-
+    pointer-events: auto;
 }
